# webkinect

./: .gitignore  Cargo.toml  README.md
example/: KinectDevice.js
source/: KinectServer.csproj
src/: geometry.rs  main.rs  tests.rs
src/shaders/: quad.frag  quad.vert
